--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <div class="paper image">
   <p> and I fallen in</p>
     <p>Love with You 😍 </p>
-   <img src="images/1.jpeg" />
+   <img src="images/1.jpeg.jpg" />
 </div>
 
 <div class="paper image">
   <p</p>
-  <img src="images/2.jpeg" />
+  <img src="images/2.jpeg.jpg" />
 </div>
 
 <div class="paper image">
   <p>How can be </p>
    <p> someone so cute ❤ </p>
 
-  <img src="images/3.jpg" />
+  <img src="images/3.jpeg.jpg" />
 </div>
 
 
