Added message below image 3

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
    <p> someone so cute ❤ </p>
 
   <img src="images/3.jpeg.jpg" />
+  <p style="margin-top: 10px; font-style: italic; font-weight: bold; color: #333;">
+    you're my space in this noisy world
+  </p>
 </div>
 
 
